hphp/hack/test/ifc/check/exceptions.php.exp
File "exceptions.php", line 12, characters 1-108:
Data with policy PRIVATE appears in context PUBLIC. (Typing[4379])
File "exceptions.php", line 5, characters 66-72:
The data source with policy PRIVATE
File "exceptions.php", line 9, characters 65-71:
The data sink with policy PUBLIC
